--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,8 @@ dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
   implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+  implementation 'com.android.support:cardview-v7:28.0.0-rc02'
+  implementation 'com.android.support:recyclerview-v7:28.0.0-rc02'
   implementation "android.arch.lifecycle:extensions:1.1.1"
   implementation 'com.squareup.picasso:picasso:2.71828'
   testImplementation 'junit:junit:4.12'
