--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,14 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
-    <activity android:name="org.josephmagara.todo.android.activities.android.ui.SplashActivity">
+    <activity android:name="org.josephmagara.todo.android.activities.android.ui.activities.SplashActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
-    <activity android:name="org.josephmagara.todo.android.activities.android.ui.ListActivity">
+    <activity android:name="org.josephmagara.todo.android.activities.android.ui.activities.ListActivity">
     </activity>
   </application>
 
