--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,6 @@ dependencies {
   implementation 'com.android.support.constraint:constraint-layout:1.1.3'
   implementation 'com.android.support:cardview-v7:28.0.0-rc02'
   implementation 'com.android.support:recyclerview-v7:28.0.0-rc02'
-  implementation "android.arch.lifecycle:extensions:1.1.1"
   implementation 'com.squareup.picasso:picasso:2.71828'
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -36,6 +35,25 @@ dependencies {
   implementation 'jp.wasabeef:picasso-transformations:2.2.1'
   implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
   implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
+
+  def lifecycle_version = "1.1.1"
+  def room_version = "1.1.1"
+
+  //Room
+
+  implementation "android.arch.persistence.room:runtime:$room_version"
+  annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+
+  // ViewModel and LiveData
+  implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+  annotationProcessor "android.arch.lifecycle:compiler:$lifecycle_version"
+
+  // alternately - if using Java8, use the following instead of compiler
+  implementation "android.arch.lifecycle:common-java8:$lifecycle_version"
+  // optional - ReactiveStreams support for LiveData
+  implementation "android.arch.lifecycle:reactivestreams:$lifecycle_version"
+  // optional - Test helpers for LiveData
+  testImplementation "android.arch.core:core-testing:$lifecycle_version"
 }
 repositories {
   mavenCentral()
