--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
 }
 
 dependencies {
@@ -40,7 +44,6 @@ dependencies {
   def room_version = "1.1.1"
 
   //Room
-
   implementation "android.arch.persistence.room:runtime:$room_version"
   annotationProcessor "android.arch.persistence.room:compiler:$room_version"
 
@@ -50,8 +53,10 @@ dependencies {
 
   // alternately - if using Java8, use the following instead of compiler
   implementation "android.arch.lifecycle:common-java8:$lifecycle_version"
+
   // optional - ReactiveStreams support for LiveData
   implementation "android.arch.lifecycle:reactivestreams:$lifecycle_version"
+
   // optional - Test helpers for LiveData
   testImplementation "android.arch.core:core-testing:$lifecycle_version"
 }
