--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,10 @@ dependencies {
 
   // optional - Test helpers for LiveData
   testImplementation "android.arch.core:core-testing:$lifecycle_version"
+
+  //Testing
+  testImplementation "junit:junit:4.12"
+  testImplementation "org.mockito:mockito-core:2.19.0"
 }
 repositories {
   mavenCentral()
