--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,11 +45,11 @@ dependencies {
 
   //Room
   implementation "android.arch.persistence.room:runtime:$room_version"
-  annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+  kapt "android.arch.persistence.room:compiler:$room_version"
 
   // ViewModel and LiveData
   implementation "android.arch.lifecycle:extensions:$lifecycle_version"
-  annotationProcessor "android.arch.lifecycle:compiler:$lifecycle_version"
+  kapt "android.arch.lifecycle:compiler:$lifecycle_version"
 
   // alternately - if using Java8, use the following instead of compiler
   implementation "android.arch.lifecycle:common-java8:$lifecycle_version"
